se realizo una pagina

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina web</title>
-</head>
-<body>
-    <h1>HOLA MUNDO</h1>
-    <p>HOLA MUNDO</p>
-</body>
+<html lang = "es">
+    <head>
+        <meta charset="UTP-8">
+        <title>Mi primera pagina</title>
+    </head>
+    <body>
+        <h1>La cebra</h1>
+        <h2>La cebra<</h2>
+        <h3>La cebra<</h3>
+        <h4>La cebra<</h4>
+        <h5>La cebra<</h5>
+        <h6>La cebra<</h6>
+        <p>La cebra</p>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fm.facebook.com%2Fkinal.gt%2Fphotos%2Fa.485613554739%2F10157626752599740%2F%3Ftype%3D3&psig=AOvVaw0b5s-zRaUbwYoSm40GNj3M&ust=1718198749437000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMi85o7T04YDFQAAAAAdAAAAABAJ" alt="Logo Kinal">
+    </body>
 </html>
