Se realizaron varias carpetas

--- a/index.html
+++ b/index.html
@@ -1,17 +1,89 @@
 <!DOCTYPE html>
-<html lang = "es">
-    <head>
-        <meta charset="UTP-8">
-        <title>Mi primera pagina</title>
-    </head>
-    <body>
-        <h1>La cebra</h1>
-        <h2>La cebra<</h2>
-        <h3>La cebra<</h3>
-        <h4>La cebra<</h4>
-        <h5>La cebra<</h5>
-        <h6>La cebra<</h6>
-        <p>La cebra</p>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fm.facebook.com%2Fkinal.gt%2Fphotos%2Fa.485613554739%2F10157626752599740%2F%3Ftype%3D3&psig=AOvVaw0b5s-zRaUbwYoSm40GNj3M&ust=1718198749437000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMi85o7T04YDFQAAAAAdAAAAABAJ" alt="Logo Kinal">
-    </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página web</title>
+    <link href="/Ejemplo 2/indwx.style.css" rel="stylesheet" type="text/css">
+    <style>
+        h1{
+            color: #b1c8e3;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <nav>
+            <h1>" Página"</h1>
+            <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="acerca-de.html">Acerca de</a></li>
+                    <li><a href="contacto-de.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+        <hr>
+        <div class="tablecontainer">
+            <div class="table1">
+                <table>
+                <caption>Tabla 1</caption>
+                <thead>
+                    <th># Numero </th>
+                    <th>Nombre </th>
+                    <th>Apellido </th>
+                </thead>
+                <tbody>
+                    <tr>
+                            <td>1</td>
+                            <td>Esteban</td>
+                            <td>Cano</td>
+                    </tr>
+                    <tr>
+                            <td>2</td>
+                            <td>Giovanni</td>
+                            <td>Carrera</td>
+                    </tr>
+                    <tr>
+                            <td>3</td>
+                            <td>Diego</td>
+                            <td>Otuc</td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <table>
+                <caption>Profesores</caption>
+                <thead>
+                        <th># Numero </th>
+                        <th>Nombre </th>
+                        <th>Apellido </th>
+                </thead>
+                <tbody>
+                    <tr>
+                            <td>1</td>
+                            <td>Jose</td>
+                            <td>Cortez</td>
+                    </tr>
+                    <tr>
+                            <td>2</td>
+                            <td>Cesar</td>
+                            <td>Palacios</td>
+                    </tr>
+                    <tr>
+                            <td>3</td>
+                            <td>Alexander</td>
+                            <td>Mayen</td>
+                        </tr>
+                    </tbody>
+                </table> 
+            </div>
+        </div>
+    </div>  
+    <hr>
+    <footer>
+        <p>Adrián Arbizú 2024&copy</p>
+    </footer>
+</body>
 </html>
+
+
